# tomatoclock

./: Cargo.toml  README.md
config/: config.toml
docker/: Dockerfile  docker-compose.yml
src/: entity.rs  impls.rs  lib.rs  main.rs  service.rs  sqlite.rs  time.rs  utils.rs
web/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
web/src/: App.jsx  main.jsx
web/src/component/: AddTomato.jsx  BackgrounMusic.jsx  ChangeDate.jsx  Countdown.jsx  EditTomato.jsx  Test.jsx  Theme.jsx  Tomatos.jsx  Yiyan.jsx
web/src/component-ui/: FormItem.jsx  Histogram.jsx  Icon.jsx  MessageBox.jsx  Modal.jsx  Switch.jsx  Table.jsx  TableFronted.jsx  Tabs.jsx  Toast.jsx  Upload.jsx
web/src/component-ui/Button/: Button.css  index.jsx
web/src/component-ui/charts/: HistogramGrid.jsx  TopView.jsx  charts.css  charts.js
web/src/component-ui/charts/CircularChart/: index.jsx  style.css
web/src/hooks/: useAsync.jsx  useClassName.jsx  useKeyPress.jsx  useResizeEle.jsx  useResizeWin.jsx  useSingleton.jsx  useSlot.jsx
web/src/layout/: Footer.jsx  Home.jsx  Navigation.jsx  Setting.jsx
web/src/layout/data/: Data.jsx  Detail.jsx  Year.jsx
web/src/scripts/: BackgroundTask.js  Database.js  EventBus.js  Storge.js  Util.js  mitt.js  scence.js  test.js
web/src/style/: App.css  Countdown.css  Footer.css  Modal.css  Navigation.css  Setting.css  Swithch.css  Table.css  Tabs.css  Toast.css  index.css
