[package]
name = "tomaotclock"
version = "1.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
serde_json = "1.0.113"
tiny_http = "0.11"
rusqlite = { version = "0.29.0", features = ["bundled"] }
urlencoding = "2.1.3" # https://docs.rs/urlencoding/latest/urlencoding/
